# RadeonProRenderMayaUSD

./: .gitignore  .gitmodules  1  README.md  build.bat  build_2023.bat  build_installer_only.bat  build_internal.bat  build_with_devkit.bat  build_with_devkit_2023.bat  build_with_devkit_2024.bat
RprUsd/: .gitignore  CMakeLists.txt  RprUsd.sln  RprUsd.vcxproj  RprUsd.vcxproj.filters  dev_rprusd_build_2023.bat
RprUsd/lib/: hdMaya.lib  mayaUsd.lib
RprUsd/lib/2023/: hdMaya.lib
RprUsd/lib/2024/: hdMaya.lib  mayaUsd.lib
RprUsd/mod/: rprUsd.mod  rprUsd_dev.mod
RprUsd/src/: RenderStudioResolverHelper.cpp  RenderStudioResolverHelper.h  defaultLightDelegate.cpp  pluginMain.cpp  version.h
RprUsd/src/BindMtlxCommand/: RprUsdBindMtlxCmd.cpp  RprUsdBindMtlxCmd.h
RprUsd/src/OpenStudioUsdStageCommand/: RprUsdOpenStudioStageCmd.cpp  RprUsdOpenStudioStageCmd.h
RprUsd/src/ProductionRender/: ProductionSettings.cpp  ProductionSettings.h  RenderProgressBars.cpp  RenderProgressBars.h  RprUsdProductionRender.cpp  RprUsdProductionRender.h  RprUsdProductionRenderCmd.cpp  RprUsdProductionRenderCmd.h  common.cpp  common.h  renderGlobals.h
RprUsd/src/ProductionRender/mayaUsd/: mayaUsd.h
RprUsd/src/SetIBLCommand/: RprUsdSetIBLCmd.cpp  RprUsdSetIBLCmd.h
RprUsd/src/ViewportRender/: renderGlobals.cpp  renderOverride.h  utils.cpp  viewCommand.cpp
RprUsd/src/python/: client.py  deviceConfigRunner.py  loadUsdStageForSharing.mel  menu.py  rprLightBrowser.py  rprMaterialXBrowser.py  runClient.py  webServerUrlHelper.py
installation/: installation.iss  installation_hdrpr_only.iss
installation/MayaEnvModifier/: CMakeLists.txt  MayaEnvModifier.cpp  MayaEnvModifier.vcxproj  MayaEnvModifier.vcxproj.filters
installation/ModModifier/: CMakeLists.txt  ModModifier.sln  ModModifier.vcxproj  dev_install_helper_projects.bat  main.cpp
installation/RprUsdModModifier/: CMakeLists.txt  RprUsdModModifier.cpp  RprUsdModModifier.vcxproj  RprUsdModModifier.vcxproj.filters
